# tx_noise

./: README.md  genRNAseq_noFold_cov.R  notes  notes_30012020  results-rsem.ipynb  results.ipynb  shuffleReads.sh  simulation_indices.ipynb  simulation_setup.ipynb  simulation_stage1_get_tissue_locs.ipynb  simulation_stage2_attach_expressions.ipynb  simulation_stage3_get_samples.ipynb  simulation_stage3_old.ipynb  simulation_stage4_normalize.ipynb  simulation_stage5_results.ipynb  simulation_stage6_genReads.ipynb  simulation_stage7_process.ipynb  wrapper.py  wrapper_joined.py
notebooks/: evaluation_stage10_extras1.ipynb  evaluation_stage10_extras2.ipynb  evaluation_stage10_extras3.ipynb  evaluation_stage1_results.ipynb  evaluation_stage2_genReads.ipynb  evaluation_stage3_process.ipynb  evaluation_stage4_align_assemble.ipynb  evaluation_stage5_quantify.ipynb  evaluation_stage6_get_results.ipynb  evaluation_stage7_get_gene_expression.ipynb  evaluation_stage8_results_tx.ipynb  evaluation_stage9_results_gene.ipynb  results.ipynb  results_gene.ipynb  simulation_indices.ipynb  simulation_setup.ipynb  simulation_stage10_get_results.ipynb  simulation_stage11_get_gene_expression.ipynb  simulation_stage1_get_tissue_locs.ipynb  simulation_stage2_attach_expressions.ipynb  simulation_stage3_get_samples.ipynb  simulation_stage4_normalize.ipynb  simulation_stage5_results.ipynb  simulation_stage6_genReads.ipynb  simulation_stage7_process.ipynb  (+2 more)
soft/: build_indices.py  (+5 more)
soft/get_results/: CMakeLists.txt  main.cpp
soft/get_results/src/: QuantRes.cpp  QuantRes.h  arg_parse.cpp  gff.cpp
(+4 files in other folders)
